hphp/hack/test/typecheck/splat/error_opt.php.like_types.exp
File "error_opt.php", line 6, characters 8-9:
Invalid argument (Typing[4359])
File "error_opt.php", line 6, characters 8-9:
An array cannot be unpacked into the required arguments of a function
File "error_opt.php", line 3, characters 10-10:
Definition is here
